# Lector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
lector/: contentwidgets.py
lector/parsers/: pdf.py
